--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -74,14 +75,14 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.13.0'
 
     implementation("io.coil-kt:coil-compose:1.3.1")
-    /* def room_version = "2.2.3"
-     implementation 'androidx.appcompat:appcompat:1.2.0'
-     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-     implementation "androidx.room:room-compiler:$room_version"
-     implementation "androidx.room:room-runtime:$room_version"
-     implementation "androidx.room:room-ktx:$room_version"*/
 
+    def room_version = "2.4.2"
+
+    kapt ("androidx.room:room-compiler:$room_version")
+    implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+   /* implementation "androidx.room:room-ktx:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"*/
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
